# darling-shell_cmds

./: .gitignore  CMakeLists.txt  README.md
darling/scripts/: gen_sh_files.sh
sh/: CMakeLists.txt
